# Click-Charge

./: .gitignore  MANAGER_UI_EXPLORATION.md  MANAGER_UI_QUICK_REFERENCE.md  package-lock.json  package.json
backend/: .env  README.md  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: database.py  main.py
backend/app/models/: chargers.py  charging_session.py  reservation.py  reservation_payment.py  station_review.py  stations.py  user.py  wallet.py
backend/app/routes/: admin_routes.py  auth.py  manager_routes.py  ocpp_routes.py  staff_routes.py  user_routes.py  wallet_routes.py
backend/app/schemas/: charger.py  charging_session.py  manager_station.py  reservation.py  slot.py  station_review.py  userValidation.py  user_station.py  wallet.py
backend/app/services/: admin_service.py  charger_service.py  manager_service.py  notification_service.py  ocpp_charger_simulator.py  ocpp_service.py  reservation_service.py  slot_service.py  station_review_service.py  user_service.py  wallet_service.py
backend/app/utils/: dependencies.py  jwt.py  security.py
frontend/: .env  README.md  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: adminApi.ts  authApi.ts  axiosInstance.ts  managerApi.ts  staffApi.ts  stationReviewApi.ts  userApi.ts  walletApi.ts
frontend/src/assets/: icon.tsx
frontend/src/config/: sidebarMenu.ts
frontend/src/hooks/: useClientPagination.ts
frontend/src/layout/: DashboardLayout.tsx  Sidebar.tsx
(+53 files in other folders)
